--- a/src/app/department/show-dep/show-dep.component.html
+++ b/src/app/department/show-dep/show-dep.component.html
@@ -1,1 +1,21 @@
-<p>show-dep works!</p>
+<div style="overflow: auto;">
+    <div class="mat-elevation-z8">
+        <mat-table [dataSource]="listData">
+            <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns:displayColumns"></mat-row>
+            <ng-container matColumnDef="Option">
+                <mat-header-cell *matHeaderCellDef>options</mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                    <button mat-icon-button (click)="onEdit(row)">
+                    <mat-icon>launch</mat-icon>
+                </button>
+                    <button mat-icon-button color="warn" (click)="onEdit(row.DepartmentID)">
+                    <mat-icon>delete_outline</mat-icon>
+                </button>
+                </mat-cell>
+            </ng-container>
+
+
+        </mat-table>
+    </div>
+</div>
