--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,23 @@
 <div class="container">
-<h3 class="d-flex justify-content-center">Angular8 with Web API Demo</h3>
-<h5 class="d-flex justify-content-center">Employee Management Portal</h5>
+    <h3 class="d-flex justify-content-center">Angular8 with Web API Demo</h3>
+    <h5 class="d-flex justify-content-center">Employee Management Portal</h5>
 
-<nav class="navbar navbar-expand-sm bg-light navbard-dark">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <button class="m-1 btn btn-light btn-outline-primary" Button
-      label = "DepScreen"
-      (click) = "DepScreen=true; EmpScreen=false;">
+    <nav class="navbar navbar-expand-sm bg-light navbard-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <button class="m-1 btn btn-light btn-outline-primary" Button label="DepScreen" (click)="DepScreen=true; EmpScreen=false;">
       Department
     </button>
-    <li class="nav-item">
-      <button class="m-1 btn btn-light btn-outline-primary" Button
-      label = "EmpScreen"
-      (click) = "EmployeeClick();">
+                <li class="nav-item">
+                    <button class="m-1 btn btn-light btn-outline-primary" Button label="EmpScreen" (click)="EmployeeClick();">
       Employee 
     </button>
-    </li>
-  </ul>
-</nav>
+                </li>
+        </ul>
+    </nav>
 
-<app-department *ngIf="DepScreen"></app-department>
-<app-employee *ngIf="EmpScreen"></app-employee>
+    <app-department *ngIf="DepScreen"></app-department>
+    <app-employee *ngIf="EmpScreen"></app-employee>
 </div>
+
+<!-- <mat-slider min="1" max="100" step="1" value="1"></mat-slider> -->
