--- a/src/app/department/show-dep/show-dep.component.html
+++ b/src/app/department/show-dep/show-dep.component.html
@@ -3,8 +3,9 @@
         <mat-table [dataSource]="listData">
             <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns:displayColumns"></mat-row>
+
             <ng-container matColumnDef="Option">
-                <mat-header-cell *matHeaderCellDef>options</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <button mat-icon-button (click)="onEdit(row)">
                     <mat-icon>launch</mat-icon>
@@ -15,6 +16,15 @@
                 </mat-cell>
             </ng-container>
 
+            <ng-container matColumnDef="DepartmentID">
+                <mat-header-cell *matHeaderCellDef>DepartmentID</mat-header-cell>
+                <mat-header-cell *matCellDef="let element">{{element.DepartmentID}}</mat-header-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="DepartmentName">
+                <mat-header-cell *matHeaderCellDef>DepartmentName</mat-header-cell>
+                <mat-header-cell *matCellDef="let element">{{element.DepartmentName}}</mat-header-cell>
+            </ng-container>
 
         </mat-table>
     </div>
