--- a/src/app/department/show-dep/show-dep.component.html
+++ b/src/app/department/show-dep/show-dep.component.html
@@ -1,31 +1,77 @@
+<mat-form-field>
+    <!-- 
+            The keyup function get executed whenever user
+        types in any value inside the text box    
+    -->
+    <input matInput (keyup)="applyFilter($event.target.value)" 
+        placeholder="Filter">
+</mat-form-field>
+
+
+
 <div style="overflow: auto;">
     <div class="mat-elevation-z8">
-        <mat-table [dataSource]="listData">
-            <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns:displayColumns"></mat-row>
+        <mat-table [dataSource]="listData" matSort>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns:displayedColumns"></mat-row>
 
-            <ng-container matColumnDef="Option">
+            <ng-container matColumnDef="Options">
                 <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <button mat-icon-button (click)="onEdit(row)">
-                    <mat-icon>launch</mat-icon>
-                </button>
-                    <button mat-icon-button color="warn" (click)="onEdit(row.DepartmentID)">
-                    <mat-icon>delete_outline</mat-icon>
-                </button>
+                        <mat-icon>launch</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="onDelete(row.DepartmentID)">
+                        <mat-icon>delete_outline</mat-icon>
+                    </button>
                 </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="DepartmentID">
-                <mat-header-cell *matHeaderCellDef>DepartmentID</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>DepartmentID</mat-header-cell>
                 <mat-header-cell *matCellDef="let element">{{element.DepartmentID}}</mat-header-cell>
             </ng-container>
 
             <ng-container matColumnDef="DepartmentName">
-                <mat-header-cell *matHeaderCellDef>DepartmentName</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>DepartmentName</mat-header-cell>
                 <mat-header-cell *matCellDef="let element">{{element.DepartmentName}}</mat-header-cell>
             </ng-container>
 
         </mat-table>
     </div>
 </div>
+
+<button class="mt-2" mat-raised-button (click)="onAdd()" color="primary">
+    Add Department
+</button>
+<!-- <div style="overflow: auto;">
+    <div class='mat-elevation-z8'>
+        <table mat-table [dataSource]="listData">
+
+        <ng-container matColumnDef="Options">
+            <th mat-header-cell *matHeaderCellDef> Options </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-icon-button (click)="onEdit(element)">
+                    <mat-icon>launch</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="onEdit(element.DepartmentID)">
+                    <mat-icon>delete_outline</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="DepartmentID">
+            <th mat-header-cell *matHeaderCellDef> DepartmentID </th>
+            <td mat-cell *matCellDef="let element"> {{element.DepartmentID}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="DepartmentName">
+            <th mat-header-cell *matHeaderCellDef> DepartmentName</th>
+            <td mat-cell *matCellDef="let element"> {{element.DepartmentName}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</div> -->
